Stop flicker on page load

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,7 +4,6 @@ body {
     padding: 0;
     font-size: 15px;
     line-height: 18px;
-    display: none;
 }
 
 p {
